DM-2179: Fixed extra white space issue with view height and added footer styling. Also removed some padding/margin styling on several pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,8 +34,15 @@ body {
 }
 
 #main-content {
-  /* ensures no white space after footer */
-  min-height: calc(100vh - 271px)
+  position: relative;
+  // Add padding equal to the height of the current footer plus 40px for spacing between 'Return to top' button and the element above it based on Figma designs
+
+  // Mobile footer height + 40px
+  padding-bottom: 439px;
+  @media screen and (min-width: 1024px) {
+    // Desktop footer height + 40px
+    padding-bottom: 235px;
+  }
 }
 
 .practice-editor-rect-svg {
