--- a/app/assets/stylesheets/dm/pages/_users.scss
+++ b/app/assets/stylesheets/dm/pages/_users.scss
@@ -1,9 +1,6 @@
 @import '../variables/colors';
-
 // Relevant to you
 .relevant_to_you {
-  padding-bottom: 20px !important;
-
   .pagination {
     display: block !important;
   }
